--- a/AgricolaCalculator/AgricolaCalculator.csproj
+++ b/AgricolaCalculator/AgricolaCalculator.csproj
@@ -48,7 +48,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Community.CsharpSqlite.WP, Version=0.6.0.0, Culture=neutral, processorArchitecture=MSIL" />
+    <Reference Include="Community.CsharpSqlite.SqlLiteClient.WP7, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Interop" />
     <Reference Include="System.Windows" />
@@ -117,6 +117,7 @@
     <Content Include="Background.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Community.CsharpSqlite.SqlLiteClient.WP7.dll" />
     <Content Include="Community.CsharpSqlite.WP.dll" />
     <Content Include="SplashScreenImage.jpg" />
   </ItemGroup>
