Dziala dodawanie i pobieranie z bazy. Baza jest ładowana do IsolatedStorage

--- a/AgricolaCalculator/AgricolaCalculator.csproj
+++ b/AgricolaCalculator/AgricolaCalculator.csproj
@@ -48,8 +48,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Community.CsharpSqlite.SqlLiteClient.WP7, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
-    <Reference Include="Community.CsharpSqlite.WP7, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Phone" />
     <Reference Include="Microsoft.Phone.Interop" />
     <Reference Include="System.Windows" />
@@ -57,6 +55,12 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Xml" />
+    <Reference Include="Vici.CoolStorage.WP7">
+      <HintPath>.\Vici.CoolStorage.WP7.dll</HintPath>
+    </Reference>
+    <Reference Include="Vici.Core.WP7">
+      <HintPath>.\Vici.Core.WP7.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
